<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" 
    tools:context=".SignUpActivity" >

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/welcomenewuser"
        android:textColor="@color/bluetext"
        android:textSize="32sp" />

    <ImageView
        android:id="@+id/ivLine"
        android:src="@drawable/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" 
        android:layout_below="@id/tvWelcome"
        android:contentDescription="@string/picturedesc"
        android:padding="0dp" />
    
    <EditText
        android:id="@+id/etNickName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ivLine"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="text"
        android:textSize="@dimen/font_size_text" >

    </EditText>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etNickName"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/font_size_text" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etEmail"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="@dimen/font_size_text" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etPassword"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/confirmpassword"
        android:textSize="@dimen/font_size_text" 
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btOK"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/etConfirmPassword"
        android:layout_centerHorizontal="true"
        android:background="@drawable/defaultbutton"
        android:text="@string/signup"
        android:textColor="@color/defaulttext"
        android:textSize="@dimen/font_size_text" 
        android:onClick="onSignup"/>

</RelativeLayout>