<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".ProfileActivity" >

    <com.miniblog.SignBar
            android:id="@+id/signbar"  
            android:layout_width="fill_parent"   
            android:layout_height="wrap_content" 
	        android:layout_marginBottom="0dp" />  
            
    <RelativeLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/signbar"
        android:padding="0dp" >

        <ImageView
            android:id="@+id/ivPicture"
            android:layout_width="match_parent"
            android:layout_height="@dimen/picturemain_height"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg"
            android:contentDescription="@string/picturedesc"
            android:padding="@dimen/pictureborder" />
        
        <Button
            android:id="@+id/btPicture"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/ivPicture"
            android:layout_alignParentRight="true"
            android:layout_margin="4dp"
            android:background="@drawable/edit"
            android:onClick="onPicture"/>

        <TextView
            android:id="@+id/lbMyblog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/ivPicture"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="2dp"
            android:text="@string/empty"
            android:textColor="@color/bluetext"
            android:textSize="@dimen/font_size_title" />

        <ImageView
            android:id="@+id/ivLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbMyblog"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/picturedesc"
            android:padding="0dp"
            android:src="@drawable/line" />

        <TextView
            android:id="@+id/lbNickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/ivLine"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="2dp"
            android:text="@string/nickname"
            android:textColor="@color/greytext"
            android:textSize="@dimen/font_size_text" />

        <EditText
            android:id="@+id/etNickName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/lbNickName"
            android:layout_toRightOf="@id/lbNickName"
            android:background="#00000000"
            android:inputType="text"
            android:text="@string/empty"
            android:textColor="@color/bluetext"
            android:textSize="@dimen/font_size_text" />

        <TextView
            android:id="@+id/lbAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbNickName"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/age"
            android:textColor="@color/greytext"
            android:textSize="@dimen/font_size_text" />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/lbAge"
            android:layout_toRightOf="@id/lbAge"
            android:background="#00000000"
            android:inputType="number"
            android:text="@string/empty"
            android:textColor="@color/bluetext"
            android:textSize="@dimen/font_size_text" />

        <TextView
            android:id="@+id/lbGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbAge"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/gender"
            android:textColor="@color/greytext"
            android:textSize="@dimen/font_size_text" />

        <EditText
            android:id="@+id/etGender"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/lbGender"
            android:layout_toRightOf="@id/lbGender"
            android:background="#00000000"
            android:inputType="text"
            android:text="@string/empty"
            android:textColor="@color/bluetext"
            android:textSize="@dimen/font_size_text" />

        <TextView
            android:id="@+id/lbBreed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbGender"
            android:layout_marginRight="10dp"
            android:text="@string/breed"
            android:textColor="@color/greytext"
            android:textSize="@dimen/font_size_text" />

        <EditText
            android:id="@+id/etBreed"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/lbBreed"
            android:layout_toRightOf="@id/lbBreed"
            android:background="#00000000"
            android:inputType="text"
            android:text="@string/empty"
            android:textColor="@color/bluetext"
            android:textSize="@dimen/font_size_text" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:background="#ff0080ff"
            android:gravity="center|center_vertical"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btBlog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/book"
                android:text="@string/empty" 
                android:onClick="onBlog"/>
        </LinearLayout>

        <Button
            android:id="@+id/btSave"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_above="@+id/linearLayout1"
            android:layout_alignParentRight="true"
            android:background="@drawable/save"
            android:onClick="onSave" />

    </RelativeLayout>

</RelativeLayout>